--- a/index.html
+++ b/index.html
@@ -11,43 +11,49 @@
 </head>
 <body>
 
-   <div class="hover">
-     <div class="arvin">
-
+     <div class="hover">
+      <div class="arvin">
 
       <i class="fa fa-home">home</i>
+      <br>
       <i class="fa fa-image">image</i>
+      <br>
       <i class="fa fa-pencil">pencil</i>
       <br>
-      <i class="fa fa-envelope">envelope</i>
-      <i class="fa fa-bell">bell</i>
-
-   
+         <ul class="arvinww">
+         <i class="fa fa-envelope">envelope</i>
+        </ul>
+         <ul class="ww">
+         <i class="fa fa-bell">bell</i>
+         </ul>
+        
    </div>
 
    </div>
+   <div class="taqana">
    <div class="flex">
        <div>
          <img class="img" src="arvin.ch.jpg" alt="">
-          <i><h1 class="top">golbol abe</h1></i>
+          <i><h1 class="kurd">golbol abe</h1></i>
           <p class="box">
            <i class="arvin86"><u>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic perspiciatis, eveniet officia a possimus quia nostrum sequi sapiente sint magnam</i></u>
           </p>
       </div>
       <div>
          <img class="img" src="arvin2.jpg" alt="">
-         <i><h1 class="top">nano</h1></i>
+         <i><h1 class="kurd">nano</h1></i>
          <p class="box">
            <i class="arvin86"><u>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic perspiciatis, eveniet officia a possimus quia nostrum sequi sapiente sint magnam</i></u>
          </p>
       </div>
       <div>
             <img class="img" src="arvin3.webp" alt="">
-            <i><h1 class="top">golbole gyrmaz</h1></i>
+            <i><h1 class="kurd">golbole gyrmaz</h1></i>
             <p class="box">
              <i class="arvin86"><u>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic perspiciatis, eveniet officia a possimus quia nostrum sequi sapiente sint magnam?</i></u>
            </p>
        </div>
     </div>
+  </div>
   </body>
 </html>
